[project]
name = "v7go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.100.0",
    "hypercorn==0.14.4",
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.1",
    "openapi-spec-validator>=0.7.1",
    "ipykernel>=6.29.5",
]
